2003-09-29  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char): Fix previous change.

2003-09-28  Kenichi Handa  <handa@m17n.org>

	* descr-text.el (describe-char-display): New function.
	(describe-char): Pay attention to display table on describing how
	a character is displayed.

	* international/mule-cmds.el (encoded-string-description): Prepend
	"0x" to each encoded byte.

2003-09-28  Andreas Schwab  <schwab@suse.de>

	* find-file.el (ff-special-constructs): Add autoload cookie.

2003-09-28  Kevin Ryde  <user42@zip.com.au>

	* info.el (Info-find-index-name): Remove any "<n>" suffixes which
	makeinfo appends to duplicate index entries.

2003-09-28  Eli Zaretskii  <eliz@elta.co.il>

	* dired-x.el (dired-clean-tex): Doc fix.

	* language/chinese.el ("Chinese-GB", "Chinese-BIG5"): Set up for
	using a Chinese tutorial.

2003-09-28  Jesper Harder  <harder@ifa.au.dk>  (tiny change)

	* mail/smtpmail.el (smtpmail-via-smtp): Don't insert a space
	between "MAIL FROM:" and "RCPT TO:" and the following address.

2003-09-28  Jesper Harder  <harder@ifa.au.dk>  (tiny change)

	* textmodes/text-mode.el (paragraph-indent-minor-mode): Doc fix.

2003-09-28  David Ponce  <david@dponce.com>

	* recentf.el (recentf-initialize-file-name-history): New
	defcustom.
	(recentf-load-list): When `recentf-initialize-file-name-history'
	is non-nil, initialize an empty `file-name-history' with the
	recent list.

2003-09-28  Evgeni Dobrev  <evgeni_dobrev@developer.bg> (tiny patch)

	* man.el (Man-default-man-entry): Remove the leading `*' from the
	word at point.

2003-09-26  Lute Kamstra  <Lute.Kamstra@cwi.nl>

	* bindings.el (mode-line-position): Mention size indication in
	docstring.

2003-09-26  Andre Spiegel  <spiegel@gnu.org>

	* calendar/parse-time.el (parse-time-string): Add autoload cookie.

	* vc-cvs.el (vc-cvs-parse-entry): Don't require parse-time,
	because it's autoloaded now.

2003-09-25  Glenn Morris  <gmorris@ast.cam.ac.uk>
