@@ -1,3 +1,8 @@
+2003-09-29  SAITO Takuya <tabmore@rivo.mediatti.net>  (tiny change)
+
+	* international/mule.el (decode-coding-inserted-region): Use car
+	of the return value of find-operation-coding-system.
+
 2003-09-29  Kenichi Handa  <handa@m17n.org>
 
 	* descr-text.el (describe-char): Fix previous change.
